--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start --watch --preserveWatchOutput",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -27,8 +27,13 @@
     "@nestjs/graphql": "^10.0.8",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.12.0",
+    "@types/config": "^0.0.41",
+    "@types/jsonwebtoken": "^8.5.8",
     "apollo-server-express": "^3.6.7",
+    "config": "^3.3.7",
     "graphql": "^16.3.0",
+    "ioredis": "^5.0.4",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
