--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "apollo-server-express": "^3.6.7",
     "config": "^3.3.7",
+    "cuid": "^2.1.8",
     "graphql": "^16.3.0",
     "ioredis": "^5.0.4",
     "jsonwebtoken": "^8.5.1",
