--- a/api/package.json
+++ b/api/package.json
@@ -28,9 +28,11 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.12.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/config": "^0.0.41",
     "@types/jsonwebtoken": "^8.5.8",
     "apollo-server-express": "^3.6.7",
+    "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "cuid": "^2.1.8",
     "graphql": "^16.3.0",
