--- a/next/package.json
+++ b/next/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.5.10",
     "graphql": "^16.3.0",
     "next": "12.1.5",
+    "nookies": "^2.5.2",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
