--- a/next/package.json
+++ b/next/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.1",
+    "@mui/material": "^5.6.1",
     "graphql": "^16.3.0",
     "next": "12.1.5",
     "nookies": "^2.5.2",
