--- a/next/package.json
+++ b/next/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
+    "apollo-link-token-refresh": "^0.4.0",
     "graphql": "^16.3.0",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.5",
     "nookies": "^2.5.2",
     "react": "18.0.0",
